Update UI and enhance delete feature (#163)
* ModelManager.java: Update comment

* Rename method name to remove mention of "list"

* Add method to convert a valid index to year and semester

* Remove tabs in ui

* Update how ui responses to some commands

* Fix modules with small case prefixes being disallowed from being added

* StringUtil.java: Add method to check if a string contains only numbers

* Rename some methods for consistency and remove mention of internal data structure

* Use convertCollectionToString method for add and delete commands

* StringUtil.java: Update REGEX name

* Move arePrefixesPresent method into ArgumentMultiMap

Also add a check for prefixes which have more than one values associated when they should have only one

* CliSyntax.java: Add a method to check if a prefix has only one associated value.

This is to prevent prefixes, which are meant to have only one value, from having multiple

* ParserUtil.java: Add a check to make sure that the year and semester are numbers

* Make the modules that appear in the ui sorted

* Update delete feature

Delete now removes modules when their prerequisites are removed. This results in chain deletion of further modules up the semesters

* Update tests

* Remove ModuleInfoTest.java

* Remove unused constructors

* Remove unnecessary predicate

* DarkTheme.css: Add new line

* Remove unnecessary code

* Add javadoc comments and fix checkstyle errors

* ModelManager.java: Fix checkstyle error

* Fix checkstyle errors

* Add additional tests for new methods

* Rename containsPrefixes() to containsAllPrefixes()